# yoctui

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
bridge/: yoctui_bridge.py
bridge/tests/: test_bridge.py  test_live_bitbake_harness.py
crates/ratabake-app/: Cargo.toml
crates/ratabake-app/src/: lib.rs
crates/ratabake-bitbake/: Cargo.toml
crates/ratabake-bitbake/src/: lib.rs
crates/ratabake-cli/: Cargo.toml
crates/ratabake-cli/src/: main.rs
crates/ratabake-model/: Cargo.toml
crates/ratabake-model/src/: lib.rs
crates/ratabake-protocol/: Cargo.toml
crates/ratabake-protocol/src/: lib.rs
crates/ratabake-ui/: Cargo.toml
crates/ratabake-ui/src/: lib.rs
crates/yoctui-app/: Cargo.toml
crates/yoctui-app/src/: lib.rs
crates/yoctui-bitbake/: Cargo.toml
crates/yoctui-bitbake/src/: lib.rs
crates/yoctui-cli/: Cargo.toml
crates/yoctui-cli/src/: main.rs
crates/yoctui-model/: Cargo.toml
crates/yoctui-model/src/: lib.rs
crates/yoctui-protocol/: Cargo.toml
crates/yoctui-protocol/src/: lib.rs
crates/yoctui-ui/: Cargo.toml
crates/yoctui-ui/src/: lib.rs
docs/: architecture.md  compatibility.md  current-task.md  implementation-status.md  product-roadmap.md  profiling-baseline.md  profiling.md  protocol.md  task-registry.toml  testing.md  ui-spec.md  yocto-workbench-plan.md
scripts/: check-checkout.sh  check-obsolete-name.sh  flamegraph.sh  headless-workload.sh  live_bitbake_smoke.py  profile-workload.sh  test-cli.sh  test-terminal.sh  valgrind.sh  verify-completion.sh  verify-live-bitbake.sh  verify-product-complete.sh  verify-roadmap.sh  verify-ui-spec.sh
