[workspace]
members = [
  "crates/ratabake-model", "crates/ratabake-protocol", "crates/ratabake-app",
  "crates/ratabake-bitbake", "crates/ratabake-ui", "crates/ratabake-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Roy Cohen <misteroy@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "signal"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
libc = "0.2"

[profile.release]
debug = 1
lto = "thin"
codegen-units = 1
