[package]
name = "yoctui"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ratabake-app = { path = "../ratabake-app" }
ratabake-bitbake = { path = "../ratabake-bitbake" }
ratabake-model = { path = "../ratabake-model" }
ratabake-ui = { path = "../ratabake-ui" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
