[package]
name = "yoctui-bitbake"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
async-trait.workspace = true
yoctui-model = { path = "../yoctui-model" }
yoctui-protocol = { path = "../yoctui-protocol" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
libc.workspace = true
