[package]
name = "yoctui"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
yoctui-app = { path = "../yoctui-app" }
yoctui-bitbake = { path = "../yoctui-bitbake" }
yoctui-model = { path = "../yoctui-model" }
yoctui-ui = { path = "../yoctui-ui" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
